RESOLVED FIXED 262931
REGRESSION (260813@main): Jamf Assessment app crashes on launch
https://bugs.webkit.org/show_bug.cgi?id=262931
Summary REGRESSION (260813@main): Jamf Assessment app crashes on launch
Wenson Hsieh
Reported 2023-10-09 17:30:51 PDT
Attachments
Wenson Hsieh
Comment 1 2023-10-09 17:48:46 PDT
EWS
Comment 2 2023-10-10 09:19:08 PDT
Committed 269145@main (bf341c88387a): <https://commits.webkit.org/269145@main> Reviewed commits have been landed. Closing PR #18877 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.