Source/WebKit/UIProcess/glib/WebProcessPoolGLib.cpp
@@ -63,7 +63,7 @@
 
 namespace WebKit {
 
-void WebProcessPool::platformInitialize()
+void WebProcessPool::platformInitialize(NeedsGlobalStaticInitialization)
 {
     m_alwaysUsesComplexTextCodePath = true;
 
